# n8n_miau

./: README.md  main.py  pyproject.toml  setup.cfg
config/: personality_profiles.yaml
scenarios/: operation_herbststurm.yaml
src/agents/: base_agent.py  believe_state.py  operational_agent.py  personality.py  stratetic_agent.py  tactical_agent.py
src/combat/: combat_resolver.py
src/communication/: message.py
src/core/: game_state.py  units.py
src/intelligence/: observation_generator.py
src/kriegsspiel/: __init__.py  config.py
src/kriegsspiel/agents/: base_agent.py  belief_state.py  operational_agent.py  personality.py  stratetic_agent.py  tactical_agent.py
src/kriegsspiel/combat/: combat_resolver.py
src/kriegsspiel/communication/: message.py
src/kriegsspiel/core/: game_state.py  types.py  units.py
src/kriegsspiel/decisions/: action_resolver.py
src/kriegsspiel/friction/: friction_generator.py
src/kriegsspiel/intelligence/: observation_generator.py
src/kriegsspiel/orchestrator/: scenario_loader.py  turn_manager.py
src/kriegsspiel/review/: aar_agent.py  evaluator.py  metrics.py  report_generator.py
src/kriegsspiel/ui/: map_renderer.py  text_interface.py
src/orchestrator/: scenario_loader.py  turn_manager.py
tests/: test_action_resolver.py  test_game_state.py  test_review.py  test_ui.py
