[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kriegsspiel"
version = "0.1.0"
description = "A turn-based tactics game prototype with Dec-POMDP characteristics."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic-settings",
    "PyYAML",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["kriegsspiel*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
