[metadata]
name = kriegsspiel
version = 0.1.0
description = A turn-based tactics game prototype with Dec-POMDP characteristics.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    pydantic-settings
    PyYAML

[options.packages.find]
where = src
include = kriegsspiel*
